--- a/concrete-strength.ipynb
+++ b/concrete-strength.ipynb
@@ -104,7 +104,7 @@
     "- Superplasticiser (kg/m<sup>3</sup>)\n",
     "- Coarse aggregate (kg/m<sup>3</sup>)\n",
     "- Fine aggregate (kg/m<sup>3</sup>)\n",
-    "- Age of testing (days).\n",
+    "- Age of testing (days)\n",
     "- Concrete compressive strength (MPa)"
    ]
   },
@@ -864,6 +864,7 @@
     "- Use L2 regularisers with λ = 0.01 to further reduce overfitting.\n",
     "- Batch size is set to 32. (Although I have read 'batch size' = 'sample size' will give more accurate results, 32 is performing better in this model)\n",
     "- Validation set is 20% of the training set.\n",
+    "\n",
     "## 5.1 Overfitting\n",
     "\n",
     "- The model is trained for metrics in MAE (mean absolute error) and MSE (mean squared error).\n",
